# ogn-web-gateway

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  renovate.json
.github/workflows/: ci.yml
docs/: websocket.md
migrations/2018-07-10-133357_ogn_positions/: down.sql  up.sql
migrations/2018-07-13-071953_swap_primary_key/: down.sql  up.sql
migrations/2018-07-13-075558_add_altitude_column/: down.sql  up.sql
migrations/2018-07-13-111306_utc_timezone/: down.sql  up.sql
migrations/2018-07-17-154148_ogn_devices/: down.sql  up.sql
src/: app.rs  aprs.rs  gateway.rs  geo.rs  main.rs  ogn_client.rs  ogn_ddb.rs  redis.rs  time.rs  units.rs  ws_client.rs
src/api/: cors_proxy.rs  ddb.rs  live.rs  mod.rs  positions.rs  records.rs  status.rs
src/app/: live.rs  mod.rs
src/db/: mod.rs  models.rs  schema.rs
src/ogn/: aprs.rs  mod.rs  time.rs
src/redis/: ddb.rs  executor.rs  messages.rs  mod.rs  positions.rs  time_buckets.rs
static/: websocket.html
