[package]
name = "ogn-web-gateway"
version = "0.1.0"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-cors = "0.1.0"
actix-files = "0.1.7"
actix-ogn = "0.3"
actix-web = { version = "1.0.9", features = ["client", "ssl"] }
actix-web-actors = "1.0.4"
anyhow = "1.0.32"
bincode = "1.3.1"
chrono = "0.4.11"
clap = "2.33.3"
failure = "0.1"
futures = "0.1"
itertools = "0.9"
lazy_static = "1.4.0"
log = "0.4"
pretty_env_logger = "0.4"
r2d2_redis = "0.9"
regex = "1"
sentry = "0.17.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0"
systemstat = "0.1.5"

[dev-dependencies]
approx = "0.3.2"
