[package]
name = "ogn-web-gateway"
version = "0.1.0"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-cors = "0.3.0"
actix-files = "0.3.0"
actix-ogn = "0.4.0"
actix-web = { version = "3.3.2", features = ["default", "openssl"] }
actix-web-actors = "3.0.0"
anyhow = "1.0.48"
bincode = "1.3.3"
chrono = "0.4.19"
clap = "2.33.3"
itertools = "0.10"
lazy_static = "1.4.0"
log = "0.4"
pretty_env_logger = "0.4"
r2d2_redis = "0.13"
regex = "1"
sentry = { version = "0.20", features = ["default", "log", "env_logger"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
systemstat = "0.1.10"

[dev-dependencies]
approx = "0.5.0"
