[package]
name = "ogn-web-gateway"
version = "0.1.0"
authors = ["Tobias Bieniek <tobias.bieniek@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.13.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-ogn = { path = "../actix-ogn" }
actix-web = "4.3.1"
actix-web-actors = "4.2.0"
anyhow = "1.0.71"
awc = { version = "3.1.1", features = ["rustls"] }
bincode = "1.3.3"
chrono = "0.4.24"
clap = "2.34.0"
itertools = "0.10"
lazy_static = "1.4.0"
log = "0.4"
pretty_env_logger = "0.4"
r2d2_redis = "0.14"
regex = "1"
sentry = { version = "0.20", features = ["default", "log", "env_logger"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0"
systemstat = "0.2.3"

[dev-dependencies]
approx = "0.5.1"
